[package]
name = "llmfs-mount"
version = "0.3.0"
edition = "2024"
license = "Apache-2.0"
description = "Mount Hugging Face Buckets and repos as a local filesystem using FUSE or NFS"
repository = "https://github.com/blouargant/llmfs-mount"
keywords = ["fuse", "nfs", "huggingface", "filesystem", "mount"]
categories = ["filesystem", "command-line-utilities"]

[dependencies]
# xet-core crates
xet-client = { git = "https://github.com/huggingface/xet-core.git", rev = "56faae12" }
xet-core-structures = { git = "https://github.com/huggingface/xet-core.git", rev = "56faae12" }
xet-data = { git = "https://github.com/huggingface/xet-core.git", rev = "56faae12" }
xet-runtime = { git = "https://github.com/huggingface/xet-core.git", rev = "56faae12" }

# External crates
async-trait = "0.1"
bytes = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
ctrlc = { version = "3", features = ["termination"] }
fuser = { version = "0.17", optional = true }
futures = "0.3"
libc = "0.2"
nfsserve = { version = "0.11", optional = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = "1"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }

[features]
default = []
fuse = ["dep:fuser"]
nfs = ["dep:nfsserve"]
vendored-openssl = ["openssl-sys/vendored"]

[dependencies.openssl-sys]
version = "0.9"
optional = true

[[bin]]
name = "llmfs-mount-fuse"
path = "src/bin/llmfs-mount-fuse.rs"
required-features = ["fuse"]

[[bin]]
name = "llmfs-mount-nfs"
path = "src/bin/llmfs-mount-nfs.rs"
required-features = ["nfs"]

[[bin]]
name = "llmfs-mount"
path = "src/bin/llmfs-mount.rs"

[[bin]]
name = "llmfs-mount-fuse-sidecar"
path = "src/bin/llmfs-mount-fuse-sidecar.rs"
required-features = ["fuse"]

[package.metadata.deb]
maintainer = "Bertrand Louargant <blouargant@users.noreply.github.com>"
section = "utils"
priority = "optional"
depends = "libfuse3-3, ca-certificates"
assets = [
    ["target/release/llmfs-mount",              "usr/bin/llmfs-mount",              "755"],
    ["target/release/llmfs-mount-fuse",          "usr/bin/llmfs-mount-fuse",          "755"],
    ["target/release/llmfs-mount-fuse-sidecar",  "usr/bin/llmfs-mount-fuse-sidecar",  "755"],
    ["target/release/llmfs-mount-nfs",           "usr/bin/llmfs-mount-nfs",           "755"],
    ["README.md",                                "usr/share/doc/llmfs-mount/README.md", "644"],
    ["LICENSE",                                  "usr/share/doc/llmfs-mount/LICENSE",   "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/llmfs-mount",              dest = "/usr/bin/llmfs-mount",              mode = "755" },
    { source = "target/release/llmfs-mount-fuse",          dest = "/usr/bin/llmfs-mount-fuse",          mode = "755" },
    { source = "target/release/llmfs-mount-fuse-sidecar",  dest = "/usr/bin/llmfs-mount-fuse-sidecar",  mode = "755" },
    { source = "target/release/llmfs-mount-nfs",           dest = "/usr/bin/llmfs-mount-nfs",           mode = "755" },
    { source = "README.md",                                dest = "/usr/share/doc/llmfs-mount/README.md", mode = "644", doc = true },
    { source = "LICENSE",                                  dest = "/usr/share/doc/llmfs-mount/LICENSE",   mode = "644", doc = true },
]

[package.metadata.generate-rpm.requires]
fuse3-libs = "*"
ca-certificates = "*"
